deploy/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: harbor-minio
    component: minio
  name: harbor-minio
spec:
  ports:
  - name: api
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: console
    port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: harbor-minio
    component: minio
  type: ClusterIP
